--- a/pom.xml
+++ b/pom.xml
@@ -43,15 +43,13 @@
         <groupId>io.cucumber</groupId>
         <artifactId>cucumber-testng</artifactId>
         <version>7.18.0</version>
-        <scope>test</scope>
     </dependency>
 
-    <!-- TestNG -->
+    <!-- TestNG (Scope removed) -->
     <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
         <version>7.10.2</version>
-        <scope>test</scope>
     </dependency>
 
     <!-- Apache POI for Excel -->
@@ -71,33 +69,6 @@
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>2.16.1</version>
-    </dependency>
-
-    <!-- MySQL Connector -->
-    <dependency>
-        <groupId>com.mysql</groupId>
-        <artifactId>mysql-connector-j</artifactId>
-        <version>8.4.0</version>
-    </dependency>
-
-    <!-- Rest Assured for API Testing -->
-    <dependency>
-        <groupId>io.rest-assured</groupId>
-        <artifactId>rest-assured</artifactId>
-        <version>5.4.0</version>
-        <scope>test</scope>
-    </dependency>
-
-    <!-- Logging -->
-    <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-core</artifactId>
-        <version>2.23.1</version>
-    </dependency>
-     <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-api</artifactId>
-        <version>2.23.1</version>
     </dependency>
 
   </dependencies>
